[Fix] Fixed comment reading control flow